style.css
body {
    align-items: center;
    background-color: #f7f7f7;
    display: block;
    font-family: Arial, sans-serif;
    height: 100vh;
    justify-content: center;
    margin: 0;
    padding: 0;
}

button {
    background-color: #007BFF;
    border: none;
    border-radius: 5px;
    color: white;
    cursor: pointer;
    font-size: 16px;
    padding: 10px 15px;
}

button:disabled {
    background-color: #ccc;
    cursor: not-allowed;
}

footer {
    text-align: center;
    padding: 20px;
    background-color: #222;
    color: white;
    position: fixed;
    bottom: 0;
    width: 100%;
}

h1 {
    color: #333;
}

header {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #8787a8;
    color: white;
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 0 0 10px 10px;
}

header h1 {
    margin: 0;
}

#controls {
    display: flex;
    gap: 10px;
    align-items: center;
    margin-top: 10px;
}

#controls label {
    font-size: 16px;
}

#controls button {
    background-color: #28a745;
    color: white;
    cursor: pointer;
}

#controls button:hover {
    background-color: #218838;
}

#controls select, #controls button {
    border: none;
    border-radius: 5px;
    font-size: 14px;
    padding: 5px 10px;
}

#easter-egg {
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
    display: none;
    border-radius: 10px;
    margin: 20px auto;
    max-width: 500px;
    padding: 20px;
    text-align: center;
    width: 90%;
}

#game-container {
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    margin: 20px auto;
    max-width: 500px;
    padding: 20px;
    text-align: center;
    width: 90%;
}

#options-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}

.container {
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    max-width: 500px;
    padding: 20px;
    text-align: center;
    width: 90%;
}

.option {
    border: 1px solid #ccc;
    border-radius: 5px;
    cursor: pointer;
    margin: 5px;
    padding: 10px;
}

.option.correct {
    background-color: #4caf50;
    color: white;
}

.option.incorrect {
    background-color: #f44336;
    color: white;
}

.option:hover {
    background-color: #e6e6e6;
}

.option.selected {
    background-color: #007BFF;
    color: white;
}

